--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     <p class="Text1">Wie löse ich Matheaufgaben?</p>
 		<p class="Text1">Quadratische Funktionen</p> 
 
-    <p class = "Aufgabe" ><span style = "background-color:white;">Was stimmt für die Parabeln?</span></p>
-        
+       
 <!--//Aufgabe 1-->
 
   <pre><p class="Aufgabe"><strong>Aufgabe 1
+
+Was stimmt für die Parabel?    
 
 y = f(x) = x<sup>2</sup>    </strong>
 <img id ="A1" src="Aufgabe1.jpg" align="middle" style="display:none; padding-top:1em; padding-bottom:1em"> <button  id = "L1" onclick="window.open('QFunkt_Aufgabe3.html');" style="display:none;">Lösung</button>
@@ -51,6 +52,8 @@ function Schalter(buttonId) {
 <!--//Aufgabe 2-->
 
     <pre><p class="Aufgabe"><strong>Aufgabe 2
+
+Was stimmt für die Parabel?      
 
 y = -x<sup>2</sup>    </strong>
 <img id ="A2" src="Aufgabe2.jpg" style="display:none; padding-top:1em; padding-bottom:1em">
@@ -91,6 +94,8 @@ function Schalter2(buttonId){
 
   <pre><p class="Aufgabe"><strong>Aufgabe 3
 
+Was stimmt für die Parabel?    
+
 y = 2x<sup>2</sup>    </strong>
 <img id ="A3" src="Aufgabe3.jpg" align ="middle" style="display:none; padding-top:1em; padding-bottom:1em"> <button  id = "L3" onclick="window.open('QFunkt_Aufgabe3.html');" style="display:none;">Lösung</button>
 <button id ="ostauch" onclick="Schalter3('ostauch')">nach oben geöffnet und gestaucht</button> 
@@ -120,6 +125,8 @@ function Schalter3(buttonId) {
 <!--//Aufgabe 4-->
 
   <pre><p class="Aufgabe"><strong>Aufgabe 4
+
+Was stimmt für die Parabel?    
 
 y = -2x<sup>2</sup>    </strong>
 <img id ="A4" src="Aufgabe4.jpg" style="display:none; padding-top:1em; padding-bottom:1em">
@@ -167,6 +174,8 @@ function Schalter4(buttonId){
 
   <pre><p class="Aufgabe"><strong>Aufgabe 5
 
+Was stimmt für die Parabel?
+
 y = 0,5x<sup>2</sup>    </strong>
 <img id ="A5" src="Aufgabe5.jpg" align ="middle" style="display:none; padding-top:1em; padding-bottom:1em"> <button  id = "L5" onclick="window.open('QFunkt_Aufgabe5.html');" style="display:none;">Lösung</button>
 <button id ="ostauch5" onclick="Schalter5('ostauch5')">nach oben geöffnet und gestaucht</button> 
@@ -196,6 +205,8 @@ function Schalter5(buttonId) {
 <!--//Aufgabe 6-->
 
  <pre><p class="Aufgabe"><strong>Aufgabe 6
+
+Was stimmt für die Parabel?  
 
 y = -0,5x<sup>2</sup>    </strong>
 <img id ="A6" src="Aufgabe6.jpg" style="display:none; padding-top:1em; padding-bottom:1em">
