--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ y   -4   <input type="text" id="Eintrag2" maxlength="2" size="1" style= backgrou
 <script>
                         function Aufgabe2() { 
                                                 
-                          if (Eintrag2.value=="-4") {alert("Richtig"); document.getElementById("Pruef2").disabled= true;
+                          if (Eintrag2.value=="-4") {alert("Richtig"); document.getElementById("Pruef2").disabled= true;window.open('QFunkt_Aufgabe2.html');
                           }  
                            
                           else if (Eintrag2.value!=="-4" && Eintrag2.value!=="") {alert("Leider falsch. Die Lösung wird angezeigt."); document.getElementById("Eintrag2").value="-4"; window.open('QFunkt_Aufgabe2.html');           
