--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ function Schalter3(buttonId) {
                          }                     
 
                            
-                          else if (buttonId ==="ostauch" || buttonId ==="ustauch" || buttonId === "ustreck") {alert("Leider falsch. Nach oben geöffnet und gestreckt sit richtig.");            
+                          else if (buttonId ==="ostauch" || buttonId ==="ustauch" || buttonId === "ustreck") {alert("Leider falsch. Nach oben geöffnet und gestreckt ist richtig.");            
                           document.getElementById("ostreck").disabled= true;document.getElementById("ustreck").disabled= true;
                           document.getElementById("ostauch").disabled= true;document.getElementById("ustauch").disabled= true;
                           document.getElementById("A3").style.display="inline";document.getElementById("L3").style.display="inline"; }
