--- a/QFunkt_Aufgabe2.html
+++ b/QFunkt_Aufgabe2.html
@@ -18,7 +18,7 @@
     
 <pre><p class ="Aufgabe">Aufgabe 2
 
-y = - x²  
+y = - x<sup>2</sup>  
 
 Wertetabelle:
 
@@ -26,7 +26,7 @@ x  -2     -1     0      1     2
 y  -4     -1     0     -1    -4 
 
 Es ist die <span style="color:red;">nach unten</span> geöffnete Normalparabel, 
-weil die Zahl vor dem x² negativ (nach unten geöffnet) 
+weil die Zahl vor dem x<sup>2</sup> negativ (nach unten geöffnet) 
 und dem Betrag nach gleich 1 (Normalparabel) ist. 
 Sie ist symmetrisch zur y-Achse und hat ihren  
 Scheitelpunkt, den höchsten Punkt, bei <span style="color:red;">S(0|0)</span>.
