--- a/QFunkt_Aufgabe3.html
+++ b/QFunkt_Aufgabe3.html
@@ -18,7 +18,7 @@
     
 <pre><p class ="Aufgabe">Aufgabe 3
 
-y = 2x²
+y = 2x<sup>2</sup>
 
 Wertetabelle:
 
@@ -26,9 +26,9 @@ x  -2     -1     0     1     2
 y   8      2     0     2     8 
 
 Es ist eine <span style="color:red;">nach oben</span> geöffnete (Zahl vor 
-dem x² ist positiv), im Vergleich zur 
+dem x<sup>2</sup> ist positiv), im Vergleich zur 
 Normalparabel, gestreckte Parabel (Zahl vor 
-dem x² ist größer als 1). Sie ist symmetrisch 
+dem x<sup>2</sup> ist größer als 1). Sie ist symmetrisch 
 zur y-Achse und hat ihren Scheitelpunkt, 
 den tiefsten  Punkt, bei <span style="color:red;">S(0|0)</span>.  
 
