--- a/QFunkt_Aufgabe4.html
+++ b/QFunkt_Aufgabe4.html
@@ -26,12 +26,12 @@ x  -2     -1     0      1     2
 y  -8     -2     0     -2    -8 
 
 Es ist eine <span style="color:red;">nach unten</span> geöffnete (Zahl vor 
-dem x² ist negativ), im Vergleich zur 
+dem x<sup>2</sup> ist negativ), im Vergleich zur 
 Normalparabel gestreckte Parabel (Zahl vor 
-dem x² ist dem Betrag nach größer als 1). 
+dem x<sup>2</sup> ist dem Betrag nach größer als 1). 
 Sie ist symmetrisch zur y-Achse und hat  
 ihren Scheitelpunkt, den höchsten Punkt, 
-bei <span style="color:red;">S(0|0)</span>.       > 
+bei <span style="color:red;">S(0|0)</span>.        
 
 <img src ="Aufgabe4a.jpg">
 
