--- a/QFunkt_Aufgabe5.html
+++ b/QFunkt_Aufgabe5.html
@@ -26,9 +26,9 @@ x  -4     -2     0       2
 y   8      2     0       2 
 
 Es ist eine <span style="color:red;">nach oben</span> geöffnete (Zahl vor 
-dem x² ist positiv) und im Vergleich zur 
+dem x<sup>2</sup> ist positiv) und im Vergleich zur 
 Normalparabel gestauchte Parabel (Zahl vor 
-dem x² ist, dem Betrag nach, kleiner als 1). 
+dem x<sup>2</sup> ist, dem Betrag nach, kleiner als 1). 
 Sie ist symmetrisch zur y-Achse und hat ihren 
 Scheitelpunkt, den tiefsten Punkt, bei <span style="color:red;">S(0|0).  
 
