--- a/QFunkt_Aufgabe8.html
+++ b/QFunkt_Aufgabe8.html
@@ -29,7 +29,7 @@ x   -2       -1      0       1       2
 y    2,5     -0,5   -1,5    -0,5     2,5    
 
 Es ist eine nach oben geöffnete Normalparabel 
-(Zahl vor dem x² ist positiv und gleich 1).  
+(Zahl vor dem x<sup>2</sup> ist positiv und gleich 1).  
 Sie ist symmetrisch zur y-Achse und hat ihren 
 Scheitelpunkt, den tiefsten Punkt, bei <span style="color:red;">S(0|-1,5)</span>.   
 
