--- a/QFunkt_Aufgabe10.html
+++ b/QFunkt_Aufgabe10.html
@@ -29,7 +29,7 @@ x  -2     -1     0     1     2
 y  -9     -3    -1    -3    -9 
 
 Es ist eine nach unten geöffnete, gestreckte Parabel 
-(Zahl vor dem x² ist negativ und dem Betrag nach 
+(Zahl vor dem x<sup>2</sup> ist negativ und dem Betrag nach 
 größer als 1). Sie ist symmetrisch zur y-Achse und hat 
 ihren Scheitelpunkt, den höchten Punkt, <span style="color:red;">S(0|-1)</span>.   
 
