--- a/QFunkt_Aufgabe9.html
+++ b/QFunkt_Aufgabe9.html
@@ -29,7 +29,7 @@ x   -2     -1     0     1     2
 y    9      3     1     3     9    
 
 Es ist eine nach oben geöffnete, gestreckte Parabel 
-(Zahl vor dem x² ist positiv und größer als 1).  
+(Zahl vor dem x<sup>2</sup> ist positiv und größer als 1).  
 Sie ist symmetrisch zur y-Achse und hat ihren 
 Scheitelpunkt, den tiefsten Punkt, bei S(0|1).       
 <span style="color:red;">S(0|1)</span>.   
