--- a/QFunkt_Aufgabe11.html
+++ b/QFunkt_Aufgabe11.html
@@ -23,13 +23,13 @@ und die Nullstellen N der folgenden Funktion?
 
 y = 0,2x<sup>2</sup> - 2 
 
-x  -4     -2     0     -2     4
+x  -4     -2     0      2     4
 y   1,2   -1,2  -2     -1,2   1,2
 
 Es ist eine nach oben geöffnete, gestauchte Parabel 
-(Zahl vor dem x² ist positiv und liegt zwischen 0 und 1).  
+(Zahl vor dem x<sup>2</sup> ist positiv und liegt zwischen 0 und 1).  
 Sie ist symmetrisch zur y-Achse und hat ihren Scheitelpunkt, 
-den tiefsten Punkt, <span style="color:red;">S(0|-2)</span>.   
+den tiefsten Punkt, bei <span style="color:red;">S(0|-2)</span>.   
 
 <img src ="Aufgabe11_L.jpg">
 
