--- a/QFunkt_Aufgabe12.html
+++ b/QFunkt_Aufgabe12.html
@@ -23,11 +23,11 @@ und die Nullstellen N der folgenden Funktion?
 
 y = -0,2x<sup>2</sup> + 2 
 
-x  -4     -2     0     -2     4
+x  -4     -2     0      2     4
 y  -1,2    1,2   2      1,2  -1,2
 
 Es ist eine nach unten geöffnete, gestauchte 
-Parabel (Zahl vor dem x² ist negativ und dem 
+Parabel (Zahl vor dem x<sup>2</sup> ist negativ und dem 
 Betrag nach kleiner als 1). Sie ist symmetrisch 
 zur y-Achse und hat ihren Scheitelpunkt, den  
 höchsten Punkt, bei <span style="color:red;">S(0|2)</span>.   
