--- a/QFunkt_Aufgabe61.html
+++ b/QFunkt_Aufgabe61.html
@@ -64,7 +64,7 @@ Neue Scheitelpunktkoordinaten:
 
 x<sub>Sneu</sub> = x<sub>S</sub> + 5 = -3 + 5 = 2 
 
-y<sub>Sneu</sub>Sneu = y<sub>S</sub> + 5 = -9 + 5 = -4 
+y<sub>Sneu</sub> = y<sub>S</sub> + 5 = -9 + 5 = -4 
 
 Neue Scheitelpunktform: 
 
