--- a/QFunkt_Aufgabe90.html
+++ b/QFunkt_Aufgabe90.html
@@ -59,8 +59,8 @@ Gesuchte Funktion :
 
 y = - (x - 8)<sup>2</sup> + 4 
 
-y = - x<sup>2</sup> - 16x - 64 + 4 
+y = - x<sup>2</sup> + 16x - 64 + 4 
 
-<span style="color:red;">y = - x<sup>2</sup> - 16x - 60</span>
+<span style="color:red;">y = - x<sup>2</sup> + 16x - 60</span>
 
 </p></pre>
