--- a/QFunkt_Aufgabe93.html
+++ b/QFunkt_Aufgabe93.html
@@ -57,7 +57,7 @@ a = -2     gestreckte Parabel, nach unten geöffnet
 
 Gesuchte Funktion : 
 
-<span style="color:red;">y = -2(x + 8)<sup>2</sup>² + 6</span> 
+<span style="color:red;">y = -2(x + 8)<sup>2</sup> + 6</span> 
 
 y = - 2(x<sup>2</sup> + 16x + 64) + 6  
 
