--- a/QFunkt_Aufgabe130.html
+++ b/QFunkt_Aufgabe130.html
@@ -32,20 +32,19 @@ Allgemein:
 y = mx + b 
 
 b, den Schnittpunkt mit der y-Achse, 
-kann man ablesen: 
-b = 60 
+kann man ablesen: b = 60 
 
 Steigung m: m ist negativ, die Gerade fällt: 
 
-60      3   
+       60       3   
 m = - ---- = - --- 
-80        
-4 
-oder P1(0|60), P2(80|0) abgelesen 
+       80       4 
+
+oder P<sub>1</sub>(0|60), P<sub>2</sub>(80|0) abgelesen 
  
-       y2 - y1      0 - 60        60        3   
-m = -------- = -------- = - ---- = - ---  
-       x2 - x1      90 - 0        80        4     
+     y<sub>2</sub> - y<sub>1</sub>     0 - 60       60       3   
+m = --------- = -------- = - ---- = - ---  
+     x<sub>2</sub> - x<sub>1</sub>     90 - 0       80       4     
  
 y = - 0,75x + 60 
  
