--- a/QFunkt_Aufgabe140.html
+++ b/QFunkt_Aufgabe140.html
@@ -39,7 +39,7 @@ Steigung m: m ist negativ, die Gerade fällt:
 m = - ------ = - --- 
        120        3 
 
-oder P<sub>1</sub>(0|80), P<sub>2</sub>2(120|0) abgelesen 
+oder P<sub>1</sub>(0|80), P<sub>2</sub>(120|0) abgelesen 
 
      y<sub>2</sub> - y<sub>1</sub>     0 - 80         80        2   
 m = --------- = --------- = - ------ = - ---  
@@ -86,7 +86,7 @@ Quadratische Ergänzung:
 mit x<sup>2</sup> - 120x + 3600 = (x - 60)<sup>2</sup>
 
    3                                   2  
-- --- * A<sub>(x)</sub> = (x - 60)² - 3 600 |*(- ---) 
+- --- * A<sub>(x)</sub> = (x - 60)<sup>2</sup> - 3 600 |*(- ---) 
    2                                   3
                                        
           2       
