--- a/QFunkt_Aufgabe142.html
+++ b/QFunkt_Aufgabe142.html
@@ -60,7 +60,7 @@ mit x<sup>2</sup> - 1400x + 490 000 = (x - 700)<sup>2</sup>
 - ------ = (x - 700)<sup>2</sup> - 90 000 |*(-2) 
     2 
 
-G<sub>(x)</sub> = -2(x - 700)² + 180 000 
+G<sub>(x)</sub> = -2(x - 700)<sup>2</sup> + 180 000 
 
 Scheitelpunkt abgelesen:   S(700|180 000) 
 
