--- a/QFunkt_Aufgabe141.html
+++ b/QFunkt_Aufgabe141.html
@@ -73,7 +73,7 @@ G<sub>(x)</sub> = - 1,5x<sup>2</sup> + 22,5x + 42 000 |:-1,5
 
 Quadratische Ergänzung: 
 
-   G(x) 
+   G<sub>(x)</sub> 
 - ------ = x<sup>2</sup> - 15x + 56,25 - 56,25 - 28 000    
    1,5 
 
