--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@ y = x<sup>2</sup> + 18x + 68 und die Gerade y = 40x - 142? </strong>
 An welchen Stellen x schneiden sich die Parabel
 y = x<sup>2</sup> - 11x + 53 und die Gerade y = 3x + 4?</strong> 
 
-Berührüunkt an der Stelle x = <input type="text" id="Eintrag82" maxlength="1" size="1" style= background-color:yellow ></input> <button id="Pruef82" onclick="Aufgabe82()">Prüfen</button></p></pre>  
+Berührpunkt an der Stelle x = <input type="text" id="Eintrag82" maxlength="1" size="1" style= background-color:yellow ></input> <button id="Pruef82" onclick="Aufgabe82()">Prüfen</button></p></pre>  
 
                       <script>
                         function Aufgabe82() { 
