--- a/index.html
+++ b/index.html
@@ -2741,7 +2741,7 @@ In einer von <input type="text" id="Eintrag143" maxlength="4" size="1" style= ba
                       </script> 
                       
 
-<a href= "sek1.html" ><p class="Text2" > <span style= "background-color:white;">zurück</span></p></a>
+<a href="https://joafroehlich.github.io/Matheaufgaben-loesen/sek1.html" ><p class="Text2" > <span style= "background-color:white;">zurück</span></p></a>
                     
         <script>
             document.body.addEventListener("input", function(inputEvent) {
